feat(openAPI): Members;
Added members API;
